# scheme-man

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
assets/Floors/: Floors.tsx
assets/Levels/: 001.tmx  002.tmx  003.tmx  004.tmx  005.tmx  006.tmx  Scheme-Man.tiled-project  Scheme-Man.tiled-session
assets/Lisp/: prelude-guile.scm  prelude.scm  useful-macros.scm
assets/Objects/: Star.tsx
assets/Objects/Coin/: Coin.tsx
assets/Objects/Star/: Star.tsx
assets/Solutions/: 001.scm  002.scm  003.scm  004.scm  006.scm
docs/: Functions.tm
lib/s7/: CMakeLists.txt  README.md  lint.scm  s7-ffi.html  s7.c  s7.h  s7.html
lib/s7/tools/: auto-tester.scm  cb.scm  ffitest.c  tests7  tform.scm  tgc.scm  thash.scm  valcall.scm
src/: AnimatedTexture.hpp  Application.cpp  Application.hpp  CMakeLists.txt  Coin.cpp  Direction.hpp  Game.hpp  HUD.hpp  Interpolated.cpp  Interpolated.hpp  Kinetic.hpp  Level.cpp  Level.hpp  LevelGeometry.hpp  LevelObject.cpp  LevelObject.hpp  Lisp.cpp  Lisp.hpp  Main.cpp  Player.cpp  Star.cpp  color.cpp  color.hpp  debug.hpp  main.cpp  window.cpp  wxSFMLControl.cpp  wxSFMLControl.hpp  wxSchemeMan.hpp
